@@ -1,0 +1,303 @@
+; Joomla! Project
+; Copyright (C) 2005 - 2013 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+
+
+;Stepbar
+INSTL_STEP_COMPLETE_LABEL="Befejezés"
+INSTL_STEP_DATABASE_LABEL="Adatbázis"
+INSTL_STEP_DEFAULTLANGUAGE_LABEL="Alapértelmezett nyelv kiválasztása"
+INSTL_STEP_FTP_LABEL="FTP konfigurálása"
+INSTL_STEP_LANGUAGE_LABEL="Nyelv"
+INSTL_STEP_LANGUAGES_LABEL="Nyelvek telepítése"
+INSTL_STEP_LICENSE_LABEL="Licenc"
+INSTL_STEP_PREINSTALL_LABEL="Telepítés előtti ellenőrzés"
+INSTL_STEP_SITE_LABEL="Konfiguráció"
+INSTL_STEP_SUMMARY_LABEL="Áttekintés"
+INSTL_STEPS_TITLE="Lépések"
+
+;Language view
+INSTL_LANGUAGE_TITLE="Nyelv kiválasztása"
+INSTL_SELECT_LANGUAGE_DESC="Válassza ki a Joomla! telepítési lépései során használandó nyelvet:"
+INSTL_SELECT_LANGUAGE_TITLE="Válasszon nyelvet"
+INSTL_WARNJAVASCRIPT="Figyelem! A Joomla! megfelelő telepítéséhez engedélyeznie kell a JavaScript használatát."
+INSTL_WARNJSON="A PHP-telepítés a JSON engedélyezését igényli a Joomla telepítéséhez!"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="Telepítés előtti ellenőrzés"
+INSTL_PRECHECK_FOR_VERSION="A(z) %s telepítés előtti ellenőrzése:"
+INSTL_PRECHECK_DESC="Ha ezen elemek bármelyike nem támogatott (<strong class="_QQ_"red"_QQ_">Nem</strong>mel jelölt), akkor javításuk végett tegye meg a lépéseket. Elmulasztása a Joomla! telepítés nem megfelelő működéséhez vezethet."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Ajánlott beállítások:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Ezek a PHP-beállítások ajánlottak a Joomlával történő teljes kompatibilitás biztosítása végett.<br />Ha ezek a beállítások nem teljesen egyeznek az ajánlottakkal, attól a Joomla! még működni fog."
+INSTL_PRECHECK_DIRECTIVE="Utasítás"
+INSTL_PRECHECK_RECOMMENDED="Ajánlott"
+INSTL_PRECHECK_ACTUAL="Jelenlegi"
+
+; Database view
+INSTL_DATABASE="Adatbázis konfigurációja"
+INSTL_DATABASE_HOST_DESC="Ez általában &quot;localhost&quot;"
+INSTL_DATABASE_HOST_LABEL="Állomás neve"
+INSTL_DATABASE_NAME_DESC="Némely állomás webhelyenként csak bizonyos adatbázisnevet engedélyez. Különböztesse meg táblanév előtaggal a Joomla! webhelyeket."
+INSTL_DATABASE_NAME_LABEL="Adatbázisnév"
+INSTL_DATABASE_NO_SCHEMA="Nem létezik adatbázis séma ehhez az adatbázis típushoz."
+INSTL_DATABASE_OLD_PROCESS_DESC="Régebbi Joomla! telepítésből meglévő bármilyen tábla lecserélésre kerül"
+INSTL_DATABASE_OLD_PROCESS_LABEL="Régi adatbázis feldolgozása"
+INSTL_DATABASE_PASSWORD_DESC="A webhely biztonsága végett a MySQL-fiók jelszavának használata kötelező"
+INSTL_DATABASE_PASSWORD_LABEL="Jelszó"
+INSTL_DATABASE_PREFIX_DESC="Válasszon egy adatbázis előtagot, vagy használja a <b>véletlenszerűen generáltat</b>. Legjobb, ha hossza három vagy négy karakter, csak alfanumerikus karaktereket tartalmaz, és aláhúzásjellel KELL végződnie. <b>Győződjön meg róla, hogy más táblák nem használják a választott előtagot</b>."
+INSTL_DATABASE_PREFIX_LABEL="Táblanév előtag"
+INSTL_DATABASE_PREFIX_MSG="A táblanév előtagnak betűvel kell kezdődnie, melyet tetszés szerinti alfanumerikus karakterek és egy aláhúzásjel követ"
+INSTL_DATABASE_TYPE_DESC="Ez valószínűleg &quot;MySQLi&quot;"
+INSTL_DATABASE_TYPE_LABEL="Adatbázis típusa"
+INSTL_DATABASE_USER_DESC="Olyasmi, mint a "_QQ_"root"_QQ_", vagy a szolgáltató által adott felhasználónév"
+INSTL_DATABASE_USER_LABEL="Felhasználónév"
+INSTL_DATABASE_TITLE="Kapcsolat beállításai"
+INSTL_DATABASE_DESC="<p>A Joomla!-webhelyek adatbázisban tárolják az összes adatot. Ez a képernyő adja meg a telepítőprogramnak az adatbázis létrehozásához szükséges információkat.</p><p> Ha Ön távoli webkiszolgálóra telepíti a Joomlát, akkor ezeket az adatokat a szolgáltatójától fogja megkapni.</p><p>Némely webállomáson a Joomla telepítése előtt kell létrehozni az adatbázist. Ha a "_QQ_"Nem lehetett kapcsolódni az adatbázishoz"_QQ_" üzenet jelenik meg, akkor ellenőrizze, hogy megfelelő-e a felhasználónév és a jelszó. Ha még mindig megjelenik ez az üzenet, akkor ellenőrizze az állomáson, hogy a Joomla telepítése előtt kell-e létrehoznia az adatbázist.</p>"
+
+;FTP view
+INSTL_AUTOFIND_FTP_PATH="FTP elérési út automatikus megkeresése"
+INSTL_FTP="FTP konfigurálása"
+INSTL_FTP_DESC="<p>Némely kiszolgálón lehet, hogy a telepítés befejezéséhez meg kell adnia az FTP hitelesítési adatait. Ha nehézségek lépnek föl a telepítés e hitelesítési adatok nélküli befejezésében, akkor állapítsa meg az állomáson, hogy ez szükségszerű-e. </p><p>Biztonsági okokból a legjobb külön FTP felhasználói fiókot készíteni a Joomla! telepítéshez való hozzáféréssel, nem pedig a teljes webkiszolgálóhoz. Szolgáltatója tud Önnek segíteni ebben.</p><p><b>MEGJEGYZÉS:</b> Windows operációs rendszerre való telepítéskor <strong>nincs</strong> szükség az FTP-rétegre.</p>"
+INSTL_FTP_ENABLE_LABEL="Az FTP-réteg engedélyezése"
+INSTL_FTP_HOST_LABEL="FTP-állomás"
+INSTL_FTP_PASSWORD_LABEL="FTP-jelszó"
+INSTL_FTP_PORT_LABEL="FTP port"
+INSTL_FTP_ROOT_LABEL="FTP-gyökér elérési útja"
+INSTL_FTP_SAVE_LABEL="FTP-jelszó mentése"
+INSTL_FTP_TITLE="FTP konfigurálása (<strong class="_QQ_"red"_QQ_">Elhagyható - A legtöbben kihagyhatják ezt a lépést - Nyomja meg a Tovább gombot</strong>)"
+INSTL_FTP_USER_LABEL="FTP-felhasználónév"
+INSTL_SITE_NAME_LABEL="A webhely neve"
+INSTL_VERIFY_FTP_SETTINGS="FTP-beállítások ellenőrzése"
+INSTL_FTP_SETTINGS_CORRECT="A beállítások megfelelőek"
+INSTL_FTP_USER_DESC="Figyelem! Ajánljuk, hogy hagyja üresen ezt a mezőt, és FTP-felhasználónevét minden fájlátvitelkor írja be."
+INSTL_FTP_PASSWORD_DESC="Figyelem! Ajánljuk, hogy hagyja üresen ezt a mezőt, és FTP-jelszavát minden fájlátvitelkor írja be."
+
+;Site View
+INSTL_SITE="Főbeállítások"
+INSTL_ADMIN_EMAIL_LABEL="Adminisztrátor e-mail címe"
+INSTL_ADMIN_EMAIL_DESC="Adjon meg egy e-mail címet. Ez lesz a webhely főadminisztrátorának e-mail címe."
+INSTL_ADMIN_PASSWORD_LABEL="Adminisztrátor jelszava"
+INSTL_ADMIN_PASSWORD_DESC="Adja meg az Ön főadminisztrátori jelszavát, és erősítse meg azt az alábbi mezőben."
+INSTL_ADMIN_PASSWORD2_LABEL="Az adminisztrátor jelszavának megerősítése"
+INSTL_ADMIN_USER_LABEL="Adminisztrátor felhasználóneve"
+INSTL_ADMIN_USER_DESC="Az alapértelmezett <strong>admin</strong> felhasználónév megváltoztatható."
+INSTL_SITE_NAME_TITLE="Webhely neve"
+INSTL_SITE_NAME_DESC="Írja be Joomla!-webhelye nevét."
+INSTL_SITE_METADESC_LABEL="Leírás"
+INSTL_SITE_METADESC_TITLE_LABEL="Írja be a webhelynek a keresőprogramok által használandó általános leírását. Általában legfeljebb 20 szó optimális."
+INSTL_SITE_OFFLINE_LABEL="A webhely üzemen kívül"
+INSTL_SITE_OFFLINE_TITLE_LABEL="A webhely felhasználói oldalának nem elérhetőre állítása a telepítés befejezése után. A Globális konfigurációban később elérhetővé tehető a webhely."
+INSTL_SITE_INSTALL_SAMPLE_LABEL="Mintaadatok telepítése"
+INSTL_SITE_INSTALL_SAMPLE_DESC="A mintaadatok telepítése nagyon ajánlott kezdők számára.<br />Ez a beállítás a Joomla! telepítőcsomagban lévő mintatartalmat fogja telepíteni."
+INSTL_SITE_INSTALL_SAMPLE_NONE="Nincs"
+INSTL_SAMPLE_BLOG_SET="Blog angol (GB) mintaadatok"
+INSTL_SAMPLE_BROCHURE_SET="Brosúra angol (GB) mintaadatok"
+INSTL_SAMPLE_DATA_SET="Alapértelmezett angol (GB) mintaadatok"
+INSTL_SAMPLE_LEARN_SET="Tanuld a Joomla!-t angol (GB) mintaadatok"
+INSTL_SAMPLE_TESTING_SET="Teszt angol (GB) mintaadatok"
+
+;Summary view
+INSTL_FINALISATION="Véglegesítés"
+INSTL_SUMMARY_INSTALL="Telepítés"
+INSTL_SUMMARY_EMAIL_LABEL="Konfiguráció küldése e-mailben"
+INSTL_SUMMARY_EMAIL_DESC="A konfigurációs beállítások elküldése e-mailben a(z) %s címre a telepítés után."
+INSTL_SUMMARY_EMAIL_PASSWORDS_LABEL="Az e-mail tartalmazza a jelszót"
+INSTL_SUMMARY_EMAIL_PASSWORDS_DESC="Figyelem! A jelszó küldése és tárolása e-mailben nem ajánlott."
+
+;Installing view
+INSTL_INSTALLING="Telepítés..."
+INSTL_INSTALLING_DATABASE_BACKUP="Régi adatbázistáblák biztonsági mentése"
+INSTL_INSTALLING_DATABASE_REMOVE="Régi adatbázistáblák eltávolítása"
+INSTL_INSTALLING_DATABASE="Adatbázistáblák létrehozása"
+INSTL_INSTALLING_SAMPLE="Mintadatok telepítése"
+INSTL_INSTALLING_CONFIG="Konfigurációs fájl létrehozása"
+INSTL_INSTALLING_EMAIL="E-mail küldése a(z) %s címre"
+
+;Email
+INSTL_EMAIL_SUBJECT="Konfiguráció részletei: %s"
+INSTL_EMAIL_HEADING="Az alábbiakban megtaláható az újonnan telepített Joomla! oldal konfigurációja:"
+INSTL_EMAIL_NOT_SENT="Nem lehetett elküldeni az e-mailt."
+
+;Complete view
+INSTL_COMPLETE="Befejezés"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Adminisztrációs bejelentkezési adatok"
+INSTL_COMPLETE_DESC1="Kattintson a Webhely gombra a Joomla! webhely megtekintéséhez, vagy az Adminisztráció gombra, mellyel az adminisztrációba való bejelentkezéshez jut."
+INSTL_COMPLETE_DESC2="A Joomla! közösségi portálon megtalálható az elérhető nyelvi csomagok hivatkozásainak listája, valamint a nyelvi vonatkozású források hivatkozásai a joomla.org lapcsaládon."
+INSTL_COMPLETE_DESC3="Kattintson a jobbra lévő gombra a közösségi portál új ablakban való megnyitásához."
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="Az installation mappa törlése megtörtént már."
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="Nem lehetett törölni az installation mappát. Kérjük, távolítsa el kézzel a mappát."
+INSTL_COMPLETE_FOLDER_REMOVED="Az installation mappa eltávolítása sikerült"
+INSTL_COMPLETE_LANGUAGE_1="A Joomla! az Ön nyelvén?"
+INSTL_COMPLETE_LANGUAGE_DESC="Az installation mappa eltávolítása előtt további nyelveket telepíthet. Ha további nyelveket akar hozzáadni a Joomla! alkalmazáshoz, akkor kattintson a következő gombra."
+INSTL_COMPLETE_LANGUAGE_DESC2="Megjegyzés: Az új nyelvek letöltésének és telepítésének a Joomla! számára való lehetővé tételéhez internethozzáférésre lesz szükség. <br/>Néhány kiszolgáló konfigurációja nem fogja megengedni a Joomla!-nak a nyelvek telepítését. Ha ez az eset áll fönn, ne csüggedjen el, a Joomla! adminisztrációban később tudja majd telepíteni őket."
+INSTL_COMPLETE_REMOVE_FOLDER="Az installation mappa eltávolítása"
+INSTL_COMPLETE_REMOVE_INSTALLATION="NE FELEDJE EL TELJESEN ELTÁVOLÍTANI AZ INSTALLATION MAPPÁT.<br />Az installation mappa eltávolításáig nem tudja ettől a ponttól folytatni. Ez a Joomla! biztonsági specialitása."
+INSTL_COMPLETE_TITLE="Gratulálunk! A Joomla! telepítése ezzel megtörtént."
+INSTL_COMPLETE_INSTALL_LANGUAGES="További lépések: Nyelvek telepítése"
+
+;Languages view
+INSTL_LANGUAGES="Nyelvi csomagok telepítése"
+INSTL_LANGUAGES_COLUMN_HEADER_LANGUAGE="Nyelv"
+INSTL_LANGUAGES_COLUMN_HEADER_VERSION="Verzió"
+INSTL_LANGUAGES_DESC="A Joomla felülete több nyelven érhető el. Válassza ki a jelölőnégyezeteikre kattintva az előnyben részesített nyelveket, és a Tovább gombra kattintva telepítse őket.<br/>Megjegyzés: Ez a művelet a letöltéshez és minden nyelv telepítéséhez körülbelül 5 másodpercig tart. Az időtúllépések elkerülése végett nem több, mint 3 telepítendő nyelvet jelöljön be."
+INSTL_LANGUAGES_MESSAGE_PLEASE_WAIT="Ennek a műveletnek a befejezése nyelvenként legfeljebb 10 másodpercig tart.<br />Kis türelmet, amíg letöltjük és telepítjük a nyelveket..."
+INSTL_LANGUAGES_NO_LANGUAGE_SELECTED="Válasszon egy nyelvet. Ha nem kell további nyelveket telepítenie, akkor nyomja meg a 'Vissza' gombot."
+INSTL_LANGUAGES_WARNING_NO_INTERNET="Nem tudott csatlakozni a Joomla! a nyelvek kiszolgálójához. Fejezze be a telepítési folyamatot."
+INSTL_LANGUAGES_WARNING_NO_INTERNET2="Megjegyzés: A Joomla! adminisztrációban később tud telepíteni nyelveket"
+INSTL_LANGUAGES_WARNING_BACK_BUTTON="Vissza az utolsó telepítési lépéshez"
+
+;Defaultlanguage view
+INSTL_DEFAULTLANGUAGE_ADMINISTRATOR="Adminisztráció alapértelmezett nyelve"
+INSTL_DEFAULTLANGUAGE_ADMIN_COULDNT_SET_DEFAULT="A Joomla nem tudta beállítani alapértelmezettként a nyelvet. Az angol lesz a kiszolgáló oldali ADMINISZTRÁCIÓ alapértelmezett nyelve."
+INSTL_DEFAULTLANGUAGE_ADMIN_SET_DEFAULT="A Joomla beállította a(z) %s nyelvet az ADMINISZTRÁCIÓ alapértelmezett nyelveként."
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_SELECT="Választás"
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_LANGUAGE="Nyelv"
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_TAG="Címke"
+INSTL_DEFAULTLANGUAGE_COULD_NOT_INSTALL_LANGUAGE="A Joomla nem tudta telepíteni a(z) %s nyelvet."
+INSTL_DEFAULTLANGUAGE_DESC="A Joomla a következő nyelveket telepítette. Válassza ki a Joomla adminisztráció óhajtott alapértelmezett nyelvét, és nyomja meg a Tovább gombot."
+INSTL_DEFAULTLANGUAGE_DESC_FRONTEND="A Joomla a következő nyelveket telepítette. Válassza ki a Joomla felhasználói oldalának óhajtott alapértelmezett nyelvét, és nyomja meg a Tovább gombot."
+INSTL_DEFAULTLANGUAGE_FRONTEND="Webhely alapértelmezett nyelve"
+INSTL_DEFAULTLANGUAGE_FRONTEND_COULDNT_SET_DEFAULT="A Joomla nem tudta alapértelmezettként beállítani a nyelvet. Az angol lesz a WEBHELY felhasználói oldalának alapértelmezett nyelve."
+INSTL_DEFAULTLANGUAGE_FRONTEND_SET_DEFAULT="A Joomla beállította a(z) %s nyelvet a WEBHELY alapértelmezett nyelveként."
+INSTL_DEFAULTLANGUAGE_NOTE="Megjegyzés: A Tovább gomb megnyomása után vissza fog jutni a telepítési folyamat végéhez, ahol az installation mappa törlését kérik."
+INSTL_DEFAULTLANGUAGE_TABLE_HEADER="Válassza ki az alapértelmezett nyelvet"
+INSTL_DEFAULTLANGUAGE_TRY_LATER="A Joomla! adminisztrációban később tudja majd telepíteni"
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="Nem lehetett kapcsolódni az adatbázishoz. Az összekötő a következő számot adta vissza: %s"
+INSTL_DATABASE_COULD_NOT_REFRESH_MANIFEST_CACHE="Nem lehetett frissíteni a következő kiterjesztés jegyzékfájl gyorsítótárát: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Az adatbázis biztonsági mentésekor néhány hiba történt."
+INSTL_DATABASE_ERROR_CREATE="Hiba történt a(z) %s adatbázis létrehozásának megkísérlésekor.<br />Lehet, hogy nincs elég engedélye a felhasználónak az adatbázis létrehozásához. Lehet, hogy a Joomla! telepítése előtt külön kell létrehozni a szükséges adatbázist."
+INSTL_DATABASE_ERROR_DELETE="Az adatbázis törlésekor néhány hiba történt."
+INSTL_DATABASE_ERROR_INITIALISE_SCHEMA="Hiba történt a sémaverziószám inicializálásakor"
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Eltávolítás"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Biztonsági mentés"
+INSTL_DATABASE_FIX_TOO_LONG="A MySQL táblanév előtagnak legfeljebb 15 karakterből kell állnia."
+INSTL_DATABASE_INVALID_DB_DETAILS="Az adatbázis megadott adatai hibásak és/vagy üresek."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="A telepítés folytatásához MySQL 5.0.4 vagy újabb szükséges. Az Ön verziója: %s"
+INSTL_DATABASE_INVALID_MYSQLI_VERSION="A telepítés folytatásához MySQL 5.0.4 vagy újabb szükséges. Az Ön verziója: %s"
+INSTL_DATABASE_INVALID_SQLSRV_VERSION="A telepítés folytatásához 2008 R2 (10.50.1600.1) vagy újabb szükséges. Az Ön verziója: %s"
+INSTL_DATABASE_INVALID_SQLZURE_VERSION="A telepítés folytatásához 2008 R2 (10.50.1600.1) vagy újabb szükséges. Az Ön verziója: %s"
+INSTL_DATABASE_INVALID_TYPE="Válassza ki az adatbázis típusát"
+INSTL_DATABASE_NAME_TOO_LONG="A MySQL adatbázis nevének maximum 64 karakterből kell állnia."
+INSTL_DATABASE_PREFIX_INVALID_CHARS="A MySQL táblanév előtagnak betűvel kell kezdődnie, amit csak betűk, számok vagy aláhúzásjelek követhetnek."
+INSTL_DATABASE_INVALID_NAME="Az 5.1.6 előtti MySQL-verziók a névben nem tartalmazhatnak pontot vagy más "_QQ_"speciális"_QQ_" karaktert. Az Ön verziója: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="A MySQL adatbázisnevek és táblanevek nem kezdődhetnek vagy végződhetnek szóközzel."
+INSTL_DATABASE_NAME_INVALID_CHAR="Egy MySQL-azonosító sem tartalmazhat NUL ASCII(0x00) azonosítót."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="A(z) %s fájl nem létezik"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="Úgy tűnik, hogy nem engedélyezte a cookie-k fogadását a böngészőjében.  Nem tudja telepíteni az alkalmazást, ha ez a funkció letiltott. Emellett probléma merülhet föl a kiszolgáló <strong>session.save_path</strong> beállításával is. Ha ez az eset áll fönn, és ha ezt nem tudja saját maga ellenőrizni vagy javítani, akkor forduljon tárhelyszolgáltatójához,."
+INSTL_HEADER_ERROR="Hiba"
+
+;Helpers
+INSTL_PAGE_TITLE="Joomla! webes telepítő"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="Nem lehetett kapcsolódni az adatbázishoz. Az összekötő a következő számot adta vissza: %s"
+INSTL_STD_OFFLINE_MSG="Weblapunk karbantartás miatt nem érhető el.<br /> Kérjük, látogasson vissza hozzánk minél előbb."
+
+;FTP model
+INSTL_FTP_INVALIDROOT="A megadott FTP-könyvtár nem ennek a Joomla!-telepítésnek a könyvtára"
+INSTL_FTP_NOCONNECT="Nem lehetett kapcsolódni az FTP-kiszolgálóhoz"
+INSTL_FTP_NODELE="A "_QQ_"DELE"_QQ_" függvény sikertelen."
+INSTL_FTP_NODIRECTORYLISTING="Nem lehetett lekérni a könyvtárlistát az FTP-kiszolgálóról."
+INSTL_FTP_NOLIST="A "_QQ_"LIST"_QQ_" függvény sikertelen."
+INSTL_FTP_NOLOGIN="Nem lehetett bejelentkezni az FTP-kiszolgálóra."
+INSTL_FTP_NOMKD="Az "_QQ_"MKD"_QQ_" függvény sikertelen."
+INSTL_FTP_NONLST="Az "_QQ_"NLST"_QQ_" függvény sikertelen."
+INSTL_FTP_NOPWD="A "_QQ_"PWD"_QQ_" függvény sikertelen."
+INSTL_FTP_NORETR="A "_QQ_"RETR"_QQ_" függvény sikertelen."
+INSTL_FTP_NORMD="Az "_QQ_"RMD"_QQ_" függvény sikertelen."
+INSTL_FTP_NOROOT="Nem lehetett elérni a megadott FTP-könyvtárat."
+INSTL_FTP_NOSTOR="A "_QQ_"STOR"_QQ_" függvény sikertelen."
+INSTL_FTP_NOSYST="A "_QQ_"SYST"_QQ_" függvény sikertelen."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Nem ismerhető fel automatikusan az FTP-gyökérmappa."
+
+;others
+INSTL_ADVANCED_SETTINGS="Speciális beállítások"
+INSTL_BASIC_SETTINGS="Alapbeállítások"
+INSTL_CONFPROBLEM="A konfigurációs fájl vagy könyvtár nem írható, ill. probléma volt a konfigurációs fájl létrehozásakor. Kézzel kell feltöltenie a következő kódot. Kattintson a szövegterületre a teljes kód kijelöléséhez, majd másolja a vágólapra és illessze be egy új 'configuration.php' nevű fájlba, és töltse föl a webhely gyökérkönyvtárába."
+INSTL_DATABASE_SUPPORT="Adatbázis-támogatás:"
+INSTL_DISPLAY_ERRORS="Display Errors"
+INSTL_ERROR_DB="Néhány hiba merült föl az adatbázis feltöltésekor: %s"
+INSTL_ERROR_INITIALISE_SCHEMA="Az adatbázisséma nem inicializálható"
+INSTL_FILE_UPLOADS="Fájlfeltöltések"
+INSTL_GNU_GPL_LICENSE="GNU Általános Nyilvános Licenc"
+INSTL_INSTALLATION="telepítő"
+INSTL_JSON_SUPPORT_AVAILABLE="JSON-támogatás"
+INSTL_LICENSE="Licenc"
+INSTL_MAGIC_QUOTES_GPC="Magic Quotes GPC ki"
+INSTL_MAGIC_QUOTES_RUNTIME="Magic Quotes Runtime"
+INSTL_MB_LANGUAGE_IS_DEFAULT="MB nyelv az alapértelmezett"
+INSTL_MB_STRING_OVERLOAD_OFF="MB String túlterhelés ki"
+INSTL_NOTICEMBLANGNOTDEFAULT="A PHP mbstring nyelvet nem semlegesre állították. Ezt a <code>.htaccess</code> fájlba a <strong>php_value mbstring.language neutral</strong> beírásával helyben is ki tudja kapcsolni."
+INSTL_NOTICEMBSTRINGOVERLOAD="A PHP mbstring függvény túlterhelését állították be. Ezt a <code>.htaccess</code> fájlba a <strong>php_value mbstring.func_overload 0</strong> beírásával helyben is ki tudja kapcsolni."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />Még folytathatja a telepítést, ugyanis a konfigurációs beállítások a végén lesznek láthatók. A kódot kézzel kell feltöltenie. Kattintson a szövegterületre az ott látható kód kijelöléséhez, majd másolja azt a vágólapra, és illessze be egy új szövegfájlba, Ennek adja a <code>configuration.php</code> nevet, és töltse fel a webhely gyökérkönyvtárába."
+INSTL_OUTPUT_BUFFERING="Kimeneti pufferelés"
+INSTL_PARSE_INI_FILE_AVAILABLE="INI-elemző támogatás"
+INSTL_PHP_VERSION="PHP-verzió"
+INSTL_REGISTER_GLOBALS="Register Globals ki"
+INSTL_SAFE_MODE="Safe Mode"
+INSTL_SESSION_AUTO_START="Munkamenet automatikus indítása"
+INSTL_WRITABLE="%s írható"
+INSTL_XML_SUPPORT="XML-támogatás"
+INSTL_ZIP_SUPPORT_AVAILABLE="Natív ZIP támogatás"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Zlib-tömörítés támogatása"
+INSTL_PROCESS_BUSY="A feldolgozás folyamatban van. Várjon..."
+
+;Global strings
+JADMINISTRATOR="Adminisztráció"
+JADVANCED="Speciális"
+JCHECK_AGAIN="Újraellenőrzés"
+JERROR="Hiba"
+JEMAIL="E-mail"
+JGLOBAL_ISFREESOFTWARE="A %s a %s alatt kiadott szabad szoftver."
+JGLOBAL_LANGUAGE_VERSION_NOT_PLATFORM="A nyelvi csomag nem egyezik ezzel a Joomla!-verzióval. Hiányozhat néhány karakterlánc."
+JGLOBAL_SELECT_AN_OPTION="Jelöljön be egy beállítást"
+JGLOBAL_SELECT_NO_RESULTS_MATCH="Nincsenek egyező eredmények"
+JGLOBAL_SELECT_SOME_OPTIONS="Jelöljön be néhány beállítást"
+JINVALID_TOKEN="A legutóbbi kérés elutasításra került, mert érvénytelen biztonsági tokent tartalmazott. Frissítse az oldalt, és próbálja újra."
+JNEXT="Tovább"
+JNO="Nem"
+JNOTICE="Megjegyzés"
+JOFF="Ki"
+JON="Be"
+JPREVIOUS="Vissza"
+JSITE="Webhely"
+JUSERNAME="Felhasználónév"
+JYES="Igen"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="Nem lehetett kapcsolódni a MySQL-hez."
+JLIB_DATABASE_ERROR_DATABASE="Adatbázishiba történt."
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Nem tölthető be a(z) %s adatbázis illesztőprogramja"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="A munkamenete lejárt, töltse be újra az oldalt."
+JLIB_FILESYSTEM_ERROR_PATH_IS_NOT_A_FOLDER_FILES="JFolder: :fájlok: Nem mappa az elérési út. Elérési út: %s"
+JLIB_FORM_FIELD_INVALID="Érvénytelen mező:&#160;"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Érvénytelen mező: %s"
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Kötelező mező: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Nem lehetett kapcsolódni az adatbázishoz <br />joomla.library: %1$s - %2$s"
+
+; Strings for the language debugger
+JDEBUG_LANGUAGE_FILES_IN_ERROR="Elemzési hibák a nyelvi fájlokban"
+JDEBUG_LANGUAGE_UNTRANSLATED_STRING="Lefordítatlan karakterláncok"
+JNONE="Nincs"
+
+;Necessary for errors
+ADMIN_EMAIL="Adminisztrátor e-mail címe"
+ADMIN_PASSWORD="Adminisztrátor jelszava"
+ADMIN_PASSWORD2="Az adminisztrátor jelszavának megerősítése"
+SITE_NAME="Webhely neve"
+
+; Database types (allows for a more descriptive label than the internal name)
+MYSQL="MySQL"
+MYSQLI="MySQLi"
+ORACLE="Oracle"
+POSTGRESQL="PostgreSQL"
+SQLAZURE="Microsoft SQL Azure"
+SQLITE="SQLite"
+SQLSRV="Microsoft SQL Server"
