@@ -27,6 +27,7 @@ $ -> Language fix or change
 
 22-Apr-2013 Jean-Marie Simonet
  $ [#30655] *TAGS: Wrong constant in en-GB.plg_finder_tags.ini
+ $ Adding Hungarian hu-HU installation language
 
 21-Apr-2013 Mark Dexter
  # Fix incorrect commit for [#30617] *Tags: Discover sql not in sync. Thanks Thomas Hunziker.
